--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class='container'>
-
+  <img class="main-image title" src="../assets/aikido.png"/>
+  </div>
   <router-outlet></router-outlet>
 
 
-</div>
