--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import './styles/bootstrap-4.1.3-dist/css/bootstrap.css';
+
 div.container{
     margin-left: 36%;
     width: 25%;
