--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class='container'>
-  <img class="main-image title" src="../assets/aikido.png"/>
+  <img class="logo" src="../assets/aikido.gif"/>
   </div>
   <router-outlet></router-outlet>
 
