--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './styles/bootstrap-4.1.3-dist/css/bootstrap.css';
+@import "./styles/bootstrap-4.1.3-dist/css/bootstrap.css";
 
-div.container{
-    margin-left: 36%;
+button{
     width: 25%;
+    margin:15%;
 }
-.form-group{
-    width: 50%;
-    margin-left: 25%;
+img.logo {
+  width: 35%;
+  margin-left: 32%;
+}
+
+.form-group {
+  width: 50%;
+  margin-left: 25%;
+}
+.file-select{
+  display: grid;
+  margin-bottom: 1em;
 }
