--- a/src/styles.css
+++ b/src/styles.css
@@ -18,4 +18,14 @@ img.logo {
 .file-select{
   display: grid;
   margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+.dates{
+  width: 27%;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+.dates-group{
+  margin-bottom: 0px;
 }
