--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,26 @@
 
 @import "./styles/bootstrap-4.1.3-dist/css/bootstrap.css";
 
-button{
-    width: 25%;
-    margin:15%;
+.form-option{
+  display:flex;
 }
+.menu-button {
+  width: 40%;
+  
+}
+.file-label {
+  font-weight: 500;
+  width: 15em;
+  padding-top: 0;
+}
+label {
+  padding-top: 1em;
+  font-weight: 300;
+}
+button {
+  margin: 5%;
+}
+
 img.logo {
   width: 35%;
   margin-left: 32%;
@@ -15,17 +31,28 @@ img.logo {
   width: 50%;
   margin-left: 25%;
 }
-.file-select{
-  display: grid;
+.file-select {
+  display: flex;
   margin-bottom: 1em;
   margin-top: 1em;
 }
 
-.dates{
+.dates {
   width: 27%;
   margin-right: 1%;
   margin-left: 1%;
 }
-.dates-group{
+.dates-group {
   margin-bottom: 0px;
+}
+.btn-inline {
+  margin-top: 0;
+  height: 2em;
+  padding: 0 1em;
+}
+.file-div {
+  background-color: rgba(249, 249, 249, 0.55);
+  margin: 1em;
+  border: gray 1px solid;
+  border-radius: 18px;
 }
