--- a/src/styles.css
+++ b/src/styles.css
@@ -2,83 +2,109 @@
 
 @import "./styles/bootstrap-4.1.3-dist/css/bootstrap.css";
 
-.form-option{
-  display:flex;
-  flex-flow: row ;
-  justify-content:space-around;
-  align-items: baseline;
-}
-.menu-button {
-  width: 40%;
-  
-}
-.file-label {
-  font-weight: 500;
-  width: 15em;
-  padding-top: 0;
-}
-label {
-  width: 17em;
-  padding-top: 1em;
-  font-weight: 300;
-}
-button {
-  margin: 5%;
-}
+/* iphoneX*/
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  img.logo {
+    width: 50%;
+    margin-left: 25%;
+  }
 
-img.logo {
-  width: 35%;
-  margin-left: 32%;
+  .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 0%;
+  }
+  .form-group {
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+  .btn-info {
+    margin-top: 2em;
+    width: 100%;
+  }
+  body{
+    font-size: medium;
+  }
 }
+/* Extra large devices (large desktops, 1200px and up)*/
+@media only screen and (min-device-width: 812px) {
+  .form-option {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+  .menu-button {
+    width: 40%;
+  }
+  .file-label {
+    font-weight: 500;
+    width: 15em;
+    padding-top: 0;
+  }
+  label {
+    width: 17em;
+    padding-top: 1em;
+    font-weight: 300;
+  }
+  button {
+    margin: 5%;
+  }
 
-.form-group {
-  width: 50%;
-  margin-left: 25%;
-}
-.file-select {
-  display: flex;
-}
+  img.logo {
+    width: 35%;
+    margin-left: 32%;
+  }
 
-.dates {
-  width: 27%;
-  margin-right: 1%;
-  margin-left: 1%;
-}
-.dates-group {
-  margin-bottom: 0px;
-  margin-left: 10em;
+  .form-group {
+    width: 50%;
+    margin-left: 25%;
+  }
+  .file-select {
+    display: flex;
+  }
 
-}
-.btn-inline {
-  margin-top: 0;
-  height: 2em;
-  padding: 0 1em;
-}
-.file-div {
-  background-color: rgba(249, 249, 249, 0.55);
-  margin: 1em;
-  border: gray 1px solid;
-  border-radius: 18px;
-}
-div.loader{
-  position:fixed;
-  top:0;
-  left:0;
-  width: 100%;
-  height:100%;
-  background-color: rgba(105, 104, 104, 0.55);
-}
-img.loader{
-  position:fixed;
-  top:45%;
-  left:45%;
-}
-.search-input{
-  width: 50%;
-}
-.table-btn{
-  background-color: #e8e8e8;
-}
-.login-button{
-  width: 100%;
+  .dates {
+    width: 27%;
+    margin-right: 1%;
+    margin-left: 1%;
+  }
+  .dates-group {
+    margin-bottom: 0px;
+    margin-left: 10em;
+  }
+  .btn-inline {
+    margin-top: 0;
+    height: 2em;
+    padding: 0 1em;
+  }
+  .file-div {
+    background-color: rgba(249, 249, 249, 0.55);
+    margin: 1em;
+    border: gray 1px solid;
+    border-radius: 18px;
+  }
+  div.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(105, 104, 104, 0.55);
+  }
+  img.loader {
+    position: fixed;
+    top: 45%;
+    left: 45%;
+  }
+  .search-input {
+    width: 50%;
+  }
+  .table-btn {
+    background-color: #e8e8e8;
+  }
+  .login-button {
+    width: 100%;
+  }
 }
