--- a/src/styles.css
+++ b/src/styles.css
@@ -9,22 +9,101 @@
     margin-left: 25%;
   }
 
-  .container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-    margin-bottom: 0%;
-  }
+  
   .form-group {
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   .btn-info {
     margin-top: 2em;
     width: 100%;
   }
-  body{
+  body {
     font-size: medium;
+  }
+  .btn {
+    margin: 1em 0.5em auto auto;
+    width: 100%;
+  }
+
+  /* Force table to not be like tables anymore */
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+  }
+  tr {
+    border: 1px solid #ccc;
+  }
+
+  td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+  }
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: -2px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    font-size: small;
+  }
+
+  /*
+	Label the data
+	*/
+  td:nth-of-type(1):before {
+    content: "Nombre";
+  }
+  td:nth-of-type(2):before {
+    content: "Email";
+  }
+  td:nth-of-type(3):before {
+    content: "Estado";
+  }
+
+  .table td {
+    padding: 0.75rem;
+    padding-top: 0.9rem;
+    padding-right: 0.75rem;
+    padding-bottom: 0.4rem;
+    padding-left: 0.75rem;
+    border-top: 1px solid #dee2e6;
+  }
+  .table-btn {
+    background-color: #c6def7;
+    width: 100%;
+    border: none;
+  }
+
+  .file-div {
+    background-color: rgba(249, 249, 249, 0.55);
+    border: gray 1px solid;
+    border-radius: 18px;
+  }
+  div.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(105, 104, 104, 0.55);
   }
 }
 /* Extra large devices (large desktops, 1200px and up)*/
