--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class='container'>
   <img class="logo" src="../assets/aikido.gif" />
 </div>
+<button onclick='logout'>Desconectar</button>
 <router-outlet></router-outlet>
